Fix for mobile hero select + added spacing between login input and submit button
Updated sortedHeroes var name in handlebars partial to fix broken hero
select on mobile.
Added spacing between input and submit button on login page.

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -388,6 +388,10 @@ hr {
     min-width: 400px;
 }
 
+#hero-list.dropdown-menu {
+    min-width: 404px;
+}
+
 .navbar-inverse {
     background-color: #29364D;
 }
